@@ -1,5 +1,6 @@
 package com.ferme.itservices.orderItem;
 
+import com.ferme.itservices.exceptions.RecordNotFoundException;
 import com.ferme.itservices.models.OrderItem;
 import com.ferme.itservices.repositories.OrderItemRepository;
 import com.ferme.itservices.services.OrderItemService;
@@ -9,14 +10,16 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 
-import static com.ferme.itservices.orderItem.OrderItemConstants.INVALID_ORDERITEM;
-import static com.ferme.itservices.orderItem.OrderItemConstants.ORDERITEM_A;
+import static com.ferme.itservices.orderItem.OrderItemConstants.*;
+import static java.util.Optional.empty;
 import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 
@@ -45,6 +48,27 @@ public class OrderItemServiceTest {
 	}
 
 	@Test
+	public void updateOrderItem_WithExistingOrderItem_ReturnsUpdatedOrderItem() {
+		when(orderItemRepository.findById(ORDERITEM_A.getId())).thenReturn(java.util.Optional.of(ORDERITEM_A));
+		when(orderItemRepository.save(ORDERITEM_A)).thenReturn(ORDERITEM_A);
+
+		OrderItem updatedOrderItem = orderItemService.update(ORDERITEM_A.getId(), NEW_ORDERITEM);
+
+		assertEquals(NEW_ORDERITEM.getOrderItemType(), updatedOrderItem.getOrderItemType());
+		assertEquals(NEW_ORDERITEM.getDescription(), updatedOrderItem.getDescription());
+		assertEquals(NEW_ORDERITEM.getPrice(), updatedOrderItem.getPrice());
+	}
+
+	@Test
+	public void updateOrderItem_WithUnexistingOrderItem_ReturnsRecordNotFoundException() {
+		when(orderItemRepository.findById(9L)).thenReturn(empty());
+
+		assertThrows(RecordNotFoundException.class, () -> {
+			orderItemService.update(9L, NEW_ORDERITEM);
+		});
+	}
+
+	@Test
 	public void getOrderItem_ByExistingId_ReturnsOrderItem() {
 		when(orderItemRepository.findById(1L)).thenReturn(Optional.of(ORDERITEM_A));
 
@@ -64,17 +88,26 @@ public class OrderItemServiceTest {
 	}
 
 	@Test
-	public void listOrderItems_ReturnsAllOrderItems() {
-		List<OrderItem> orderItems = new ArrayList<>() {
-			{ add(ORDERITEM_A); }
-		};
-		when(orderItemRepository.findAll()).thenReturn(orderItems);
+	public void listOrderItems_WhenOrderItemExists_ReturnsAllOrderItemsSortedByDescription() {
+		when(orderItemRepository.findAll()).thenReturn(ORDER_ITEMS);
 
-		List<OrderItem> sut = orderItemRepository.findAll();
+		List<OrderItem> sut = orderItemService.listAll();
 
 		assertThat(sut).isNotEmpty();
-		assertThat(sut).hasSize(1);
-		assertThat(sut.getFirst()).isEqualTo(ORDERITEM_A);
+		assertThat(sut).hasSize(ORDER_ITEMS.size());
+		assertThat(sut.get(0)).isEqualTo(ORDERITEM_C);
+		assertThat(sut.get(1)).isEqualTo(ORDERITEM_B);
+		assertThat(sut.get(2)).isEqualTo(ORDERITEM_A);
+		assertThat(sut).isSortedAccordingTo(Comparator.comparing(OrderItem::getDescription));
+	}
+
+	@Test
+	public void listOrderItems_ReturnsSortedOrderItemsByDescription() {
+		when(orderItemRepository.findAll()).thenReturn(ORDER_ITEMS);
+
+		List<OrderItem> sut = orderItemService.listAll();
+
+		assertThat(sut).isSortedAccordingTo(Comparator.comparing(OrderItem::getDescription));
 	}
 
 	@Test
@@ -96,5 +129,10 @@ public class OrderItemServiceTest {
 		doThrow(new RuntimeException()).when(orderItemRepository).deleteById(1L);
 
 		assertThatThrownBy(() -> orderItemService.deleteById(1L)).isInstanceOf(RuntimeException.class);
+	}
+
+	@Test
+	public void deleteAllOrderItems_doesNotThrowAnyException() {
+		assertThatCode(() -> orderItemService.deleteAll()).doesNotThrowAnyException();
 	}
 }
